--- a/9. Insight Email Starter Files/index.html
+++ b/9. Insight Email Starter Files/index.html
@@ -29,7 +29,7 @@
 </head>
 <body style="margin:0;padding:0;" bgcolor="#DADADA">
 
-	<table bgcolor="#DADADA" width="100%" role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
+	<table bgcolor="#DADADA" width="100%" role="presentation" style="width:100%;border-collapse:collapse;border:0;border-spacing:0;font-family: Arial, sans-serif;">
 		<tr>
 			<td class="blue-background" align="center" style="padding:0;">
 				<br/><br/>
